tests/machine/x/fortran/partial_application.error
error: gfortran: exit status 1
/workspace/mochi/tests/machine/x/fortran/partial_application.f90:5:16:

    5 |   print *, add5(3)
      |                1
Error: Syntax error in PRINT statement at (1)
/workspace/mochi/tests/machine/x/fortran/partial_application.f90:4:9:

    4 |   add5 = add(5)
      |         1
Error: Missing actual argument for argument ‘b’ at (1)

